--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Module1"]
 	path = Module1
 	url = git@github.com:datmt/submodule-demo-module-1.git
+[submodule "Module2"]
+	path = Module2
+	url = git@github.com:datmt/submodule-demo-module-2.git
